Fixed: borders not showing correctly on Safari

--- a/src/components/basicInfo/basicInfo.css
+++ b/src/components/basicInfo/basicInfo.css
@@ -4,7 +4,8 @@
 .basic-info .border-img {
   margin: 0 auto;
   border-radius: 8px;
-  border: 19px solid transparent;
+  border-style: solid;
+  border-width: 19px;
   border-image: url("../../assets/images/border-60px.png") 19 round;
   width: 571px;
   height: 132px;
