--- a/src/components/scrollDisplay/scrollDisplay.css
+++ b/src/components/scrollDisplay/scrollDisplay.css
@@ -1,7 +1,8 @@
 .scroll-display .border-img {
   margin: 0 auto;
   border-radius: 8px;
-  border: 19px solid transparent;
+  border-style: solid;
+  border-width: 19px;
   border-image: url("../../assets/images/border-60px.png") 19 round;
   width: 769px;
   height: 30px;
